--- a/about.html
+++ b/about.html
@@ -11,11 +11,13 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-left">
-      <img src="images/HV Logo.png" alt="HavenSure Logo" class="logo">
+      <img src="images/57.png" alt="HavenSure Logo" class="logo">
     </div>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html" class="active">About</a></li>
+      <li><a href="our-story.html">Our Story</a></li>
+      <li><a href="projects.html">Iconic Projects</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -31,7 +33,7 @@
   <section class="content">
     <!-- Company Story -->
     <div class="card fade-up">
-      <img src="images/HV Logo1.png" alt="Company Story">
+      <img src="images/57.png" alt="Company Story">
       <div class="card-text">
         <h2>Who We Are</h2>
         <p>
