--- a/index.html
+++ b/index.html
@@ -11,40 +11,41 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-left">
-      <img src="images/HV Logo.png" alt="HavenSure Logo" class="logo">
-      
+      <img src="images/57.png" alt="HavenSure Logo" class="logo">
     </div> 
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
+      <li><a href="our-story.html">Our Story</a></li>
+      <li><a href="projects.html">Iconic Projects</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <!-- Hero Slider Section -->
-   <section class="hero-slider">
-  <div class="slide active" style="background-image: url('images/123.jpg');">
-    <div class="slide-text">
-      <h2>Built for You. Verified by Us.</h2>
-      <p>Delivering precision, compliance, and care to ensure every property handover meets the highest standards.</p>
+  <section class="hero-slider">
+    <div class="slide active" style="background-image: url('images/123.jpg');">
+      <div class="slide-text">
+        <h2>Built for You. Verified by Us.</h2>
+        <p>Delivering precision, compliance, and care to ensure every property handover meets the highest standards.</p>
+      </div>
     </div>
-  </div>
 
-  <div class="slide" style="background-image: url('images/assurence2.png');">
-    <div class="slide-text">
-      <h2>Your Property, Our Assurence</h2>
-      <p>Ensuring flawless delivery and complete compliance for builders and buyers.</p>
+    <div class="slide" style="background-image: url('images/assurence2.png');">
+      <div class="slide-text">
+        <h2>Your Property, Our Assurence</h2>
+        <p>Ensuring flawless delivery and complete compliance for builders and buyers.</p>
+      </div>
     </div>
-  </div>
 
-  <div class="slide" style="background-image: url('images/hnaadover\ 1.jpg');">
-    <div class="slide-text">
-      <h2>Trusted Handover Solutions</h2>
-      <p>Technology-driven audits for smooth and verified property handovers.</p>
+    <div class="slide" style="background-image: url('images/hnaadover 1.jpg');">
+      <div class="slide-text">
+        <h2>Trusted Handover Solutions</h2>
+        <p>Technology-driven audits for smooth and verified property handovers.</p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Intro -->
   <section class="about">
