--- a/services.html
+++ b/services.html
@@ -12,11 +12,13 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-left">
-      <img src="images/HV Logo.png" alt="HavenSure Logo" class="logo">
+      <img src="images/57.png" alt="HavenSure Logo" class="logo">
     </div>
     <ul>
-      <li><a href="index.html">Home</a></li>
+       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
+      <li><a href="our-story.html">Our Story</a></li>
+      <li><a href="projects.html">Iconic Projects</a></li>
       <li><a href="services.html" class="active">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -49,7 +51,7 @@
       - Detailed reports within 72 hours <br>
       - Trusted by builders, banks, and NRIs
     </p>
-    <a href="CiviTech Audit/index.html" target="_blank" class="btn">Visit CiviTech Audit</a>
+    <a href="CiviTech/index.html" target="_blank" class="btn">Visit CiviTech Audit</a>
   </div>
 </section>
 
