--- a/contact.html
+++ b/contact.html
@@ -106,12 +106,14 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-left">
-      <img src="images/HV Logo.png" alt="HavenSure Logo" class="logo">
+      <img src="images/57.png" alt="HavenSure Logo" class="logo">
       <span class="company-name"></span>
     </div>
     <ul>
-      <li><a href="index.html">Home</a></li>
+       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
+      <li><a href="our-story.html">Our Story</a></li>
+      <li><a href="projects.html">Iconic Projects</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
